# torchcodec

./: .clang-format  .flake8  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  README.md  audio_encoder_design.md  benchmark_cache.py  benchmark_nvdec_simple.py  decoder_native_transforms.md  index.html  mypy.ini  pyproject.toml  report1.nsys-rep  report2.nsys-rep  report3.nsys-rep  report4.nsys-rep  report5.nsys-rep  report6.nsys-rep  report7.nsys-rep  report8.nsys-rep  rfc_samplers.md  setup.py  version.txt  versions.html
.github/ISSUE_TEMPLATE/: bug-report.yml  documentation.yml  feature-request.yml
.github/scripts/: assert_ffmpeg_not_installed.sh  build_ffmpeg.sh  check_glibcxx.py  helpers.sh
.github/workflows/: benchmarks.yaml  build_ffmpeg.yaml  cpp_tests.yaml  cpp_tests_osx.yaml  cuda_tests.yaml  cuda_tests_12.4.yaml  docs.yaml  gpu_tests.yaml  lint.yaml  linux_aarch64_wheel.yaml  linux_cuda_wheel.yaml  linux_wheel.yaml  macos_wheel.yaml  reference_resources.yaml  test_linux_cuda.yaml  unit_test.yaml  wheel.yaml  wheel2.yaml  (+2 more)
0.0.1/: .buildinfo  api_ref_decoders.html  genindex.html  glossary.html  index.html  install_instructions.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
0.0.2/: api_ref_decoders.html  genindex.html  glossary.html  index.html  install_instructions.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
0.0.3/: .buildinfo  api_ref_decoders.html  genindex.html  glossary.html  index.html  install_instructions.html  search.html  searchindex.js  sg_execution_times.html
0.1/: api_ref_decoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
0.1.0/: api_ref_decoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  search.html  searchindex.js  sg_execution_times.html
0.2.0/: api_ref_decoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
0.3.0/: api_ref_decoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  search.html  searchindex.js  sg_execution_times.html
0.4.0/: api_ref_decoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
0.5.0/: api_ref_decoders.html  api_ref_encoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  search.html  sg_execution_times.html
0.6.0/: api_ref_torchcodec.html  genindex.html  glossary.html  search.html  searchindex.js  sg_execution_times.html
0.7.0/: api_ref_decoders.html  api_ref_encoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  search.html  sg_execution_times.html
docs/: Makefile  requirements.txt
examples/: README.rst  approximate_mode.py  audio_decoding.py  basic_cuda_example.py  basic_example.py  basic_example_remove_me.py  cuda_example.py  file_like.py  sampling.py
main/: api_ref_decoders.html  api_ref_encoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
main_preview/: api_ref_decoders.html  api_ref_samplers.html  api_ref_torchcodec.html  genindex.html  glossary.html  index.html  install_instructions.html  objects.inv  search.html  searchindex.js  sg_execution_times.html
packaging/: build_ffmpeg.bat  build_ffmpeg.sh  check_glibcxx.py  cuda12.4.yaml  env_var_script.sh  fake_smoke_test.py  linux_cuda_pre_build_script.sh  post_build_script.sh  pre_build_script.sh  relocate.py  validate_wheel.sh  vc_env_helper.bat
src/torchcodec/_core/: AVIOBytesContext.cpp  AVIOBytesContext.h  AVIOContextHolder.cpp  AVIOContextHolder.h  AVIOFileLikeContext.cpp  AVIOFileLikeContext.h  AVIOTensorContext.cpp  AVIOTensorContext.h  BetaCudaDeviceInterface.cpp  BetaCudaDeviceInterface.h  CMakeLists.txt  CPUOnlyDevice.cpp  Cache.h  CpuDeviceInterface.cpp  CpuDeviceInterface.h  CudaDevice.cpp  CudaDevice.h  CudaDeviceInterface.cpp  CudaDeviceInterface.h  CustomNvdecDeviceInterface.cpp  CustomNvdecDeviceInterface.h  DeviceInterface.cpp  DeviceInterface.h  Encoder.cpp  Encoder.h  FFMPEGCommon.cpp  FFMPEGCommon.h  FilterGraph.cpp  FilterGraph.h  Frame.cpp  Frame.h  Metadata.h  NVDECCache.cpp  NVDECCache.h  SingleStreamDecoder.cpp  SingleStreamDecoder.h  Stream.h  StreamOptions.h  Transform.cpp  Transform.h  (+12 more)
src/torchcodec/_core/nvcuvid_include/: cuviddec.h  nvcuvid.h
src/torchcodec/decoders/_core/: AVIOBytesContext.cpp  AVIOBytesContext.h  AVIOContextHolder.cpp  AVIOContextHolder.h  AVIOFileLikeContext.cpp  AVIOFileLikeContext.h  CMakeLists.txt  CPUOnlyDevice.cpp  CUDACommon.cpp  CUDACommon.h  CudaDevice.cpp  CudaDevice.h  DeviceInterface.cpp  DeviceInterface.h  FFMPEGCommon.cpp  FFMPEGCommon.h  PyBindOps.cpp  VideoDecoder.cpp  VideoDecoder.h  VideoDecoderOps.cpp  VideoDecoderOps.h  XpuDevice.cpp  __init__.py  _metadata.py  custom_ops.cpp  fetch_and_expose_non_gpl_ffmpeg_libs.cmake  ops.py  pybind_ops.cpp  video_decoder_ops.py
test/: CMakeLists.txt  VideoDecoderTest.cpp  conftest.py  convert_image_to_tensor.py  generate_reference_resources.py  generate_reference_resources.sh  test_decoders.py  test_encoders.py  test_frame_dataclasses.py  test_metadata.py  test_ops.py  test_policy.py  test_samplers.py  test_utils.py  test_variable_fps_video.py  test_version.py  test_video_clip_sampler.py  utils.py
test/decoders/: CMakeLists.txt  VideoDecoderOpsTest.cpp  VideoDecoderTest.cpp  convert_image_to_tensor.py  generate_reference_resources.sh  manual_smoke_test.py  simple_video_decoder_test.py  test_decoders.py  test_metadata.py  test_ops.py  test_simple_video_decoder.py  test_video_decoder.py  test_video_decoder_ops.py  video_decoder_ops_test.py
test/decoders/resources/: nasa_13013.mp4.frame000002.pt
(+445 files in other folders)
