[project]
name = "TorchCodec"
description = "A video decoder for PyTorch"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    { name = "PyTorch Team", email = "packages@pytorch.org" },
]
dynamic = ["version"]

[project.urls]
GitHub = "https://github.com/pytorch/torchcodec"
Documentation = "https://pytorch.org/torchcodec/stable/index.html"

[tool.setuptools.dynamic]
version = {attr = "torchcodec.__version__"}

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = [
    "numpy",
    "pytest",
    "pillow",
]

[tool.usort]
# Needed for compatibility with internal linter
first_party_detection = false

[tool.black]
target-version = ["py38"]

[tool.ufmt]

excludes = [
    "examples",
]
